Revert "Fix the one pixel jump..."
This reverts commit 35980d3dea749d8f766b823c02f37e8978312dc0.

Made to the wrong branch.

--- a/rapidpro_community_portal/static/css/main.css
+++ b/rapidpro_community_portal/static/css/main.css
@@ -90,7 +90,6 @@ nav a.selected{
   background-color:#00517A;
   margin-top: -0.35em;
   font-weight: 700;
-  min-height: 30px;
 }
 .sub-nav .page-width{
   padding:0 9em;
